[package]
name = "heaven-earth-moving"
version = "0.1.0"
authors = ["lurui <lurui@ipfsforce.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.4"
#actix-web = "3"
# 序列化
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = "*"

# 日志
log = "0.4.0"
env_logger = "0.6.0"

# 异步连接池
deadpool-postgres = { version = "0.7" }
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }

# 时间
chrono = "0.4.19"

# 运行时
tokio = { version = "1.2.0", features = ["full"] }

# 认证
jsonwebtoken = "7"

# 鉴权
actix-casbin= {version = "0.4.2", default-features = false, features = [ "runtime-tokio" ]}
actix-casbin-auth = {version = "0.4.4", default-features = false, features = [ "runtime-tokio" ]}
## 从postgresql读取rbac_policy信息
diesel-adapter = { version = "0.9.0", features = ["postgres"] }

# 跨域
#actix-cors = "0.5"
actix-cors = { git = "https://github.com/andy128k/actix-extras.git", branch = "update-dependencies" }

# 读toml
toml = "0.5.8"

# 加密
rust-crypto = "^0.2"

# 定时器
delay_timer = {  version = "0.3.1", features = ["full"]  }

# http请求库
curl = "0.4.35"

# 雪花算法生成全局唯一ID
rs-snowflake = "*"

# base64
base64 = "0.13.0"